possible wrapping fix.

--- a/components/Functional/MarkdownContent.tsx/MarkdownContent.module.css
+++ b/components/Functional/MarkdownContent.tsx/MarkdownContent.module.css
@@ -22,7 +22,7 @@
 }
 
 .subtext{
-    font-size: 12pt;
+    font-size: 10pt;
 }
 
 .subtextTheme{
